src/objects/Slot_MERC__c.object
<CustomObject>
    <description>Used support Many to Many relationship between Meeting Object and Event Participants
Slots will be created by for each meeting and does not need to be a junction object.
Used to manage capacity for a meeting and to manage Country allocation capacity for international meetings

Created by John A Adams 9/26/2013</description>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Slots with meetings 
Created by John A Adams 9/27/2013</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Slots</relationshipLabel>
        <relationshipName>Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Slots_MERC__c</fullName>
        <description>Maximum recommended slots available per country
Created by John A Adams 9/27/2013</description>
        <label>Number of Slots</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slot_Title_MERC__c</fullName>
        <description>Title of the meeting slot 
Created by John A Adams 9/27/2013</description>
        <label>Slot Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code_MERC__c</fullName>
        <description>Territory Code from Veeva. Created 12/6/2013 by KLorenti, Mavens Consulting</description>
        <label>Territory Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Description_MERC__c</fullName>
        <description>Territory Description from Veeva. Created 12/6/2013 by KLorenti, Mavens Consulting</description>
        <label>Territory Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Accepted_MERC__c</fullName>
        <description>Rolls up those Participants who have accepted the meeting. Oliver Dunford 6th Nov 2013.</description>
        <label>Total # Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attended_MERC__c</fullName>
        <description>Rolls up those with a meeting participant status of Attended. Oliver Dunford 6th Nov 2013</description>
        <label>Total # Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Declined_MERC__c</fullName>
        <description>Rolls up those participants in a Slot who have declined the meeting. Oliver Dunford 6th Nov 2013</description>
        <label>Total # Declined</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Participants_MERC__c</fullName>
        <description>Rolls up the total number of participants assigned to a Slot. Oliver Dunford 6th Nov 2013.</description>
        <label>Total # Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Slot</label>
    <nameField>
        <label>Slot Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I11000000CjxpEAC_00N11000000SbbAEAS</fullName>
        <active>true</active>
        <field>Meeting_Participant_MERC__c.Slot_MERC__c</field>
        <filterItems>
            <field>$Source.Meeting_MERC__c</field>
            <operation>equals</operation>
            <valueField>Slot_MERC__c.Meeting_MERC__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting Participant_Slot</name>
        <sourceObject>Meeting_Participant_MERC__c</sourceObject>
    </namedFilters>
    <pluralLabel>Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>